--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next": "12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-scroll-parallax": "^3.3.1",
     "regenerator-runtime": "0.13.7",
     "stylis-plugin-rtl": "^2.1.1",
     "tslib": "^2.3.0"
