--- a/apps/werkstatt-app/project.json
+++ b/apps/werkstatt-app/project.json
@@ -1,4 +1,5 @@
 {
+  "name": "werkstatt-app",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "apps/werkstatt-app",
   "projectType": "application",
@@ -44,7 +45,7 @@
     },
     "test": {
       "executor": "@nrwl/jest:jest",
-      "outputs": ["coverage/apps/werkstatt-app"],
+      "outputs": ["{workspaceRoot}/coverage/apps/werkstatt-app"],
       "options": {
         "jestConfig": "apps/werkstatt-app/jest.config.ts",
         "passWithNoTests": true
