--- a/libs/werkstatt-app-ui/project.json
+++ b/libs/werkstatt-app-ui/project.json
@@ -1,4 +1,5 @@
 {
+  "name": "werkstatt-app-ui",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "libs/werkstatt-app-ui/src",
   "projectType": "library",
@@ -13,7 +14,7 @@
     },
     "test": {
       "executor": "@nrwl/jest:jest",
-      "outputs": ["coverage/libs/werkstatt-app-ui"],
+      "outputs": ["{workspaceRoot}/coverage/libs/werkstatt-app-ui"],
       "options": {
         "jestConfig": "libs/werkstatt-app-ui/jest.config.ts",
         "passWithNoTests": true
