--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
     "@mantine/core": "^5.2.4",
     "@mantine/hooks": "^5.2.4",
     "@mantine/next": "^5.2.4",
-    "@nrwl/next": "14.6.2",
+    "@nrwl/next": "15.2.4",
     "@tabler/icons": "^1.91.1",
     "core-js": "^3.6.5",
     "embla-carousel-react": "^7.0.2",
-    "next": "12.2.5",
+    "next": "13.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-scroll-parallax": "^3.3.1",
@@ -28,40 +28,40 @@
     "tslib": "^2.3.0"
   },
   "devDependencies": {
-    "@nrwl/cli": "14.6.2",
-    "@nrwl/cypress": "14.6.2",
-    "@nrwl/eslint-plugin-nx": "14.6.2",
-    "@nrwl/jest": "14.6.2",
-    "@nrwl/linter": "14.6.2",
-    "@nrwl/nx-cloud": "latest",
-    "@nrwl/react": "14.6.2",
-    "@nrwl/web": "14.6.2",
-    "@nrwl/workspace": "14.6.2",
-    "@testing-library/react": "13.3.0",
+    "@nrwl/cli": "15.2.4",
+    "@nrwl/cypress": "15.2.4",
+    "@nrwl/eslint-plugin-nx": "15.2.4",
+    "@nrwl/jest": "15.2.4",
+    "@nrwl/linter": "15.2.4",
+    "@nrwl/nx-cloud": "15.0.2",
+    "@nrwl/react": "15.2.4",
+    "@nrwl/web": "15.2.4",
+    "@nrwl/workspace": "15.2.4",
+    "@testing-library/react": "13.4.0",
     "@types/jest": "28.1.1",
-    "@types/node": "16.11.7",
-    "@types/react": "18.0.18",
+    "@types/node": "18.7.18",
+    "@types/react": "18.0.20",
     "@types/react-dom": "18.0.6",
-    "@typescript-eslint/eslint-plugin": "~5.33.1",
-    "@typescript-eslint/parser": "~5.33.1",
+    "@typescript-eslint/eslint-plugin": "5.36.1",
+    "@typescript-eslint/parser": "5.36.1",
     "babel-jest": "28.1.1",
-    "cypress": "^10.2.0",
+    "cypress": "^11.0.0",
     "eslint": "~8.15.0",
-    "eslint-config-next": "12.2.5",
+    "eslint-config-next": "13.0.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
     "eslint-plugin-import": "2.26.0",
     "eslint-plugin-jsx-a11y": "6.6.1",
-    "eslint-plugin-react": "7.31.1",
+    "eslint-plugin-react": "7.31.8",
     "eslint-plugin-react-hooks": "4.6.0",
     "jest": "28.1.1",
     "jest-environment-jsdom": "28.1.1",
-    "nx": "14.6.2",
-    "prettier": "^2.6.2",
+    "nx": "15.2.4",
+    "prettier": "2.6.2",
     "react-test-renderer": "18.2.0",
-    "sass": "1.54.5",
+    "sass": "1.55.0",
     "ts-jest": "28.0.5",
     "ts-node": "10.9.1",
-    "typescript": "~4.7.2"
+    "typescript": "4.8.4"
   }
 }
