--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -16,7 +16,8 @@
     "baseUrl": ".",
     "paths": {
       "@werkstatt/ui": ["libs/ui/src/index.ts"],
-      "@werkstatt/werkstatt-app-ui": ["libs/werkstatt-app-ui/src/index.ts"]
+      "@werkstatt/werkstatt-app-ui": ["libs/werkstatt-app-ui/src/index.ts"],
+      "@werkstatt/werkstatt-models": ["libs/werkstatt-models/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
