--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@tabler/icons": "^1.116.1",
     "core-js": "^3.6.5",
     "embla-carousel-react": "^7.0.5",
+    "framer-motion": "^10.16.4",
     "imagemin-mozjpeg": "^10.0.0",
     "next": "13.0.0",
     "next-compose-plugins": "^2.2.1",
